--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:VulcanForWindows"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local1="using:Vulcanova.Features.Grades"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:local1="using:VulcanForWindows.Classes"
     mc:Ignorable="d"
     >
 
