--- a/VulcanForWindows/MainWindow.xaml
+++ b/VulcanForWindows/MainWindow.xaml
@@ -35,7 +35,7 @@
                         <ImageIcon Source="/Assets/GradesIcon.png"/>
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem Icon="Save" Content="Menu Item2" Tag="BlankPage1" />
+                <NavigationViewItem Icon="Save" Content="Plan Lekcji" Tag="TimetablePage" />
                 <!--<NavigationViewItem Icon="Refresh" Content="Menu Item3" Tag="SamplePage3" />
                 <NavigationViewItem Icon="Download" Content="Menu Item4" Tag="SamplePage4" />-->
             </NavigationView.MenuItems>
