--- a/VulcanForWindows/TimetablePage.xaml
+++ b/VulcanForWindows/TimetablePage.xaml
@@ -7,55 +7,90 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     xmlns:t="using:VulcanTest.Vulcan.Timetable"
+    xmlns:tc="using:Vulcanova.Features.Timetable"
     xmlns:Scheduler="using:DevExpress.WinUI.Scheduler">
 
-    <Grid x:Name="grid">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="36"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
-        <Button Click="Button_Click"/>
-
-        <ItemsRepeater ItemsSource="{x:Bind display}" Grid.Row="1" x:Name="lv" HorizontalAlignment="Stretch">
-            <ItemsRepeater.Layout>
-                <UniformGridLayout Orientation="Horizontal" ItemsJustification="SpaceAround" ItemsStretch="Fill" MinColumnSpacing="0"/>
-            </ItemsRepeater.Layout>
-            <!--<ItemsView.ItemContainerStyle>
-                <Style TargetType="GridViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                </Style>
-            </ItemsView.ItemContainerStyle>-->
-
-            <ItemsRepeater.ItemTemplate>
-                <DataTemplate x:DataType="local:Day">
-                    <ItemContainer HorizontalAlignment="Stretch">
-                        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-                            <TextBlock Text="{x:Bind day}" FontWeight="Bold" FontSize="18" HorizontalAlignment="Stretch" Margin="0,0,0,10"/>
-                            <ListView ItemsSource="{x:Bind e}" VerticalContentAlignment="Stretch" 
+    <Page.Resources>
+        <DataTemplate x:DataType="local:Day" x:Key="DayTemp">
+            <!--<ItemContainer HorizontalContentAlignment="Stretch">-->
+            <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Stretch" MinWidth="220">
+                <TextBlock Text="{x:Bind day}" FontWeight="Bold" FontSize="18" HorizontalAlignment="Stretch" Margin="0,0,0,10" TextAlignment="Center"/>
+                <ListView ItemsSource="{x:Bind e}" VerticalContentAlignment="Stretch" 
                                       VerticalAlignment="Stretch" HorizontalAlignment="Stretch" 
-                                      HorizontalContentAlignment="Stretch" Height="500" SelectionMode="None">
-                                <ListView.ItemTemplate>
-                                    <DataTemplate x:DataType="t:TimetableEntry">
-                                        <StackPanel Margin="0,0,0,8">
-                                            <TextBlock Text="{x:Bind subName}" FontWeight="Bold"/>
-                                            <Grid>
-                                                <TextBlock 
+                                      HorizontalContentAlignment="Stretch" Height="500">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="tc:TimetableListEntry">
+                            <Grid Tapped="ViewDetails">
+                                <Grid.Resources>
+                                    <Style TargetType="TextBlock">
+                                        <Setter Property="Foreground" Value="{x:Bind textColor}"/>
+                                        <Setter Property="TextDecorations" Value="{x:Bind textDecor}"/>
+                                    </Style>
+                                </Grid.Resources>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="32"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
+                                <StackPanel Padding="0,0,5,0" VerticalAlignment="Center">
+                                    <TextBlock 
                                             Text="{x:Bind displayTime}" 
                                             FontWeight="SemiLight" 
-                                            FontSize="12" HorizontalAlignment="Left"/>
-                                                <TextBlock 
-                                            Text="{x:Bind RoomName}" 
+                                            FontSize="12" HorizontalAlignment="Center" TextAlignment="Justify"/>
+                                </StackPanel>
+                                <StackPanel Margin="0,0,0,8" Grid.Column="1" VerticalAlignment="Center">
+                                    <TextBlock Text="{x:Bind subName}" FontWeight="Bold" Foreground="{x:Bind SubNameColor}" 
+                                               TextTrimming="CharacterEllipsis"/>
+                                    <Grid>
+                                        <TextBlock 
+                                            Text="{x:Bind teacher}" 
                                             FontWeight="SemiLight" 
-                                            FontSize="12" HorizontalAlignment="Right" Grid.Column="1"/>
-                                            </Grid>
-                                        </StackPanel>
-                                    </DataTemplate>
-                                </ListView.ItemTemplate>
-                            </ListView>
-                        </StackPanel>
-                    </ItemContainer>
-                </DataTemplate>
-            </ItemsRepeater.ItemTemplate>
-        </ItemsRepeater>
+                                            FontSize="12" HorizontalAlignment="Left" Foreground="{x:Bind TeacherColor}"/>
+                                        <TextBlock 
+                                            Text="{x:Bind room}" 
+                                            FontWeight="SemiLight" 
+                                            FontSize="12" HorizontalAlignment="Right" Grid.Column="1" Foreground="{x:Bind RoomColor}"/>
+                                    </Grid>
+
+                                </StackPanel>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </StackPanel>
+            <!--</ItemContainer>-->
+        </DataTemplate>
+    </Page.Resources>
+    <Grid x:Name="grid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="45"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <ProgressBar x:Name="LoadingBar" 
+            HorizontalAlignment="Stretch" VerticalAlignment="Top" IsIndeterminate="True" ShowPaused="False" ShowError="False"/>
+        <StackPanel Orientation="Horizontal">
+            <Button Click="Prev" Content="&lt;"/>
+            <TextBlock x:Name="sel" TextAlignment="Center" VerticalAlignment="Center" Margin="5,0,5,0" FontWeight="SemiBold" FontSize="16"/>
+            <Button Click="Next" Content=">"/>
+        </StackPanel>
+
+        <Grid DataContext="{x:Bind display}" Grid.Row="1" x:Name="gr">
+            <!--<ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <ItemsWrapGrid Orientation="Horizontal" MaximumRowsOrColumns="999" HorizontalAlignment="Stretch" ItemWidth="250">
+                    </ItemsWrapGrid>
+                    -->
+            <!-- Use ItemsWrapGrid with Horizontal Orientation -->
+            <!--
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>-->
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+        </Grid>
     </Grid>
 </Page>
